# solverang

./: CHANGELOG.md  Cargo.toml  NEXT-PLAN.md  OPT-PLAN.md  README.md  STATUS.md  TESTING_STRATEGY.md  TODO.md  notes-jit.md  notes-mcad.md
crates/macros/: Cargo.toml
crates/macros/src/: CLAUDE.md  codegen.rs  codegen_opcodes.rs  expr.rs  lib.rs  parse.rs
crates/macros/tests/: ui.rs
crates/macros/tests/trybuild/: hessian_on_residual.rs  hessian_on_residual.stderr  unsupported_method.rs  unsupported_method.stderr
crates/solverang/: Cargo.toml  README.md
crates/solverang/benches/: comprehensive.rs  jit_benchmark.rs  nist_benchmarks.rs  scaling.rs
crates/solverang/examples/: geometric_constraints.rs
crates/solverang/src/: decomposition.rs  id.rs  lib.rs  problem.rs  system.rs
crates/solverang/src/assembly/: constraints.rs  entities.rs  mod.rs
crates/solverang/src/constraint/: mod.rs
crates/solverang/src/constraints/: inequality.rs  mod.rs
crates/solverang/src/dataflow/: cache.rs  mod.rs  tracker.rs
crates/solverang/src/entity/: mod.rs
crates/solverang/src/geometry/: builder.rs  circle.rs  constraint.rs  entity.rs  line.rs  mod.rs  params.rs  point.rs  system.rs  vector.rs
crates/solverang/src/graph/: bipartite.rs  cluster.rs  decompose.rs  diagnostics.rs  dm.rs  dof.rs  incremental.rs  mod.rs  pattern.rs  redundancy.rs  union_find.rs
crates/solverang/src/jacobian/: mod.rs  numeric.rs  pattern.rs  (+2 more)
crates/solverang/tests/: assembly_property_tests.rs  contract_tests.rs  geometric_tests.rs  geometry_property_tests.rs  graphics2d_test_suite.rs  jit_generic_tests.rs  lm_tests.rs  macro_functions.rs  macro_hessian.rs  macro_tests.rs  minpack_optimization.rs  minpack_verification.rs  new_entities.rs  optimization_solvers.rs  optimization_types.rs  parallel_tests.rs  property_tests.proptest-regressions  property_tests.rs  sketch2d_property_tests.proptest-regressions  sketch2d_property_tests.rs  sketch3d_property_tests.rs  solver_comparison.rs  solver_megatest.rs  solver_tests.rs  sparse_tests.rs  test_3d_constraints.rs  test_v2_edge_cases.rs  test_v2_entities.rs  test_v2_graph_pipeline.rs  test_v2_jacobians.rs  test_v2_solve.rs
(+219 files in other folders)
