[package]
name = "solverang_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for automatic Jacobian generation via symbolic differentiation"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "parsing",
    "visit",
] }

[dev-dependencies]
trybuild = "1"
